test/corpus/statements.txt
==================
Subroutine
==================

sub vcl_fetch {
}

---

(program
  (subroutine
    name: (identifier)
    (statement_block)))

==================
Include
==================

include "foo.vcl";

---

(program
  (include_statement
    source: (string
      (string_fragment))))

==================
Return
==================

sub vcl_fetch {
  return;
}

sub vcl_fetch {
  return(pass);
}

---

(program
  (subroutine
    name: (identifier)
    (statement_block
      (return_statement)))
  (subroutine
    name: (identifier)
    (statement_block
      (return_statement
        (action)))))

==================
Error
==================

sub vcl_fetch {
  error;
  error 301;
  error 301 "Moved Permanently";
}

---

(program
  (subroutine
    name: (identifier)
    (statement_block
      (error_statement)
      (error_statement
        status: (status_code))
      (error_statement
        status: (status_code)
        message: (string
          (string_fragment))))))

==================
Restart
==================

sub vcl_fetch {
  restart;
}

---

(program
  (subroutine
    name: (identifier)
    (statement_block
      (restart_statement))))

==================
ESI
==================

sub vcl_fetch {
  esi;
}

---

(program
  (subroutine
    name: (identifier)
    (statement_block
      (esi_statement))))

==================
Declare
==================

sub vcl_fetch {
  declare local var.expiry_time TIME;
}

---

(program
  (subroutine
    name: (identifier)
    (statement_block
      (declare_statement
        scope: (declare_scope)
        (user_defined_variable
          name: (identifier))
        type: (type)))))

==================
Call
==================

sub vcl_fetch {
  call foo_bar_subroutine;
}

---

(program
  (subroutine
    name: (identifier)
    (statement_block
      (call_statement
        subroutine_name: (identifier)))))

==================
Synthetic
==================

sub vcl_fetch {
  synthetic "User-Agent: ExampleBot";
}

---

(program
  (subroutine
    name: (identifier)
    (statement_block
      (synthetic_statement
        (string
          (string_fragment))))))

==================
Synthetic.base64
==================

sub vcl_fetch {
  synthetic "User-Agent: ExampleBot";
}

---

(program
  (subroutine
    name: (identifier)
    (statement_block
      (synthetic_statement
        (string
          (string_fragment))))))

==================
Comments
==================

sub vcl_fetch {
  // Single line of out-commented VCL.
  # Another way of commenting out a single line.
  /*
    Multi-line block of commented-out VCL.
  */
}

---

(program
  (subroutine
    name: (identifier)
    (statement_block
      (comment)
      (comment)
      (comment))))

==================
Set
==================

sub vcl_fetch {
  declare local var.foo STRING;
  set var.foo = "foobar";

  set req.http.FOO = "bar";
  set req.http.Cache-Control:private = "";
}

---

(program
  (subroutine
    name: (identifier)
    (statement_block
      (declare_statement
        scope: (declare_scope)
        (user_defined_variable
          name: (identifier))
          type: (type))
      (set_statement
        (user_defined_variable
          name: (identifier))
        (string
          (string_fragment)))
      (set_statement
        (vcl_variable
          scope: (vcl_scope)
          variable: (identifier)
          index: (identifier))
        (string
          (string_fragment)))
      (set_statement
        (vcl_variable
          scope: (vcl_scope)
          variable: (identifier)
          index: (identifier)
          subfield: (identifier))
        (string)))))

==================
Unset
==================

sub vcl_fetch {
  unset req.http.FOO;
}

---

(program
  (subroutine
    name: (identifier)
    (statement_block
      (unset_statement
        (vcl_variable
          scope: (vcl_scope)
          variable: (identifier)
          index: (identifier))))))

